test/compare/sources/errors/bad-switch3.go
// errcmp

package main

func main() {
	switch i := 0; i.(type) {
	}
}
